--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.danielco56.stayfocused">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +21,8 @@
         </activity>
         <activity android:name=".FirstPage" />
         <activity android:name=".Main2Activity" />
-        <activity android:name=".UserResult"></activity>
+        <activity android:name=".UserResult" />
+        <activity android:name=".Statistics"></activity>
     </application>
 
 </manifest>
