--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://jitpack.io' }
+        /////AD
+        maven { url "https://maven.google.com" }
+
         google()
         jcenter()
     }
