--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
 
     /////////AD
     implementation 'com.google.android.gms:play-services-ads:15.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
